tests/invalid/wrong_proc_call.lang
fn add(a: i32, b: i32) i32;

extern fn main() void {
    add(1, c"");
}
